# The-Data-Toolbox

./: Dockerfile  Fireducks_in_Action_A_Quick_Look.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt
DuckDB-vs-Polars-vs-FireDucks/: .dockerignore  Dockerfile  README.md  docker-compose.yml
duckdb-cli-and-python/: main.py  requirements.txt
duckdb-vs-polars-vs-fireducks/: .gitignore  README.md  convert_csv_to_parquet.py  pyproject.toml
duckdb-vs-polars-vs-fireducks/.devcontainer/: devcontainer.json
duckdb-vs-polars-vs-fireducks/duckdb_vs_polars_vs_fireducks/: __main__.py  config.py  utils.py  visualize_output.py
duckdb-vs-polars-vs-fireducks/duckdb_vs_polars_vs_fireducks/queries/: __init__.py  agg_fireducks.py  window_func_fireducks.py
duckdb_vs_polars_vs_fireducks/: __main__.py  agg_duckdb.py  agg_fireducks.py  agg_pandas.py  agg_polars.py  config.py  groupby_agg_duckdb.py  groupby_agg_fireducks.py  groupby_agg_pandas.py  groupby_agg_polars.py  join_duckdb.py  join_fireducks.py  join_pandas.py  join_polars.py  read_csv_duckdb.py  read_csv_fireducks.py  read_csv_pandas.py  read_csv_polars.py  utils.py  visualize_output.py  window_func_duckdb.py  window_func_fireducks.py  window_func_pandas.py  window_func_polars.py
ducklake/: .env.example  README.md  docker-compose.yml  ducklake_postgres_local.py  ducklake_r2_neon.py  ducklake_simplest.py
getting-started-with-dagster/: requirements.txt
intro-to-bauplan/: .gitignore  .user.yml  hello.py  pyproject.toml  requirements.txt
intro-to-dlt/: .env.example  .gitignore  README.md  pyproject.toml  (+2 more)
(+103 files in other folders)
